--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -586,3 +586,111 @@ body {
     }
   }
 }
+
+.newsList {
+  position: relative;
+  @include centringMixin;
+  &_content {
+    width: 1440px;
+    position: relative;
+
+    &_innerContainer {
+      
+      margin-left: 80px;
+      margin-right: 80px;
+      display: flex;
+      flex-direction: column;
+
+      &_top {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 50px;
+        &_left {
+
+          &_breadcrumbs {
+            margin-top: 42px;
+            display: flex;
+            gap: 7px;
+            align-items: center;
+            margin-bottom: 25px;
+    
+            &_icon {
+    
+            }
+            &_point {
+              width: 3px;
+              height: 3px;
+              background: #664EF9;
+              border-radius: 50%;
+            }
+            &_title {
+              @include fontStd(#686868, 14px, 400, 100%);
+            }
+          }
+          &_title {
+            h1 {
+              font-size: 100%;
+              margin: 0;
+              //font-weight: normal;
+            }
+              
+              @include fontStd(#1E2123, 30px, 700, 100%);
+          }
+        }
+        &_search {
+          position: relative;
+          z-index: 10;
+          margin-top: calc(86px);
+        }
+      }
+      
+      &_background {
+        position: absolute;
+        top: 31.42px;
+        right: 0;
+        background: linear-gradient(90deg, #94AFFF 0%, #4E64F9 94.5%);
+        opacity: 0.1;
+        border-radius: 40px 0px 0px 40px;
+        width: 800px;
+        height: 999.21px;
+        z-index: 1;
+      }
+
+      &_newsCards {
+        display: flex;
+        justify-content: center;
+        gap: 30px;
+        flex-wrap: wrap;
+        
+      }
+
+      &_pagination {
+        margin-top: 80px;
+        margin-bottom: 100px;
+
+        ul {
+          margin: 0;
+          padding: 0;
+          display: flex;
+          gap: 4.5px;
+          li {
+              margin: 0;
+              padding: 0;
+              width: 22px;
+              height: 22px;
+              @include centringMixin;
+              @include noSelect;
+              @include fontStd(#686868, 18px, 400, 22px);
+
+              &:active {
+                  @include fontStd(black, 18px, 700, 22px);
+              margin-bottom: -2px;
+              border-bottom: 2px solid #FFD54F;
+          }
+      }
+
+      }
+      }
+    }
+  }
+}
