--- a/src/views/pages/contacts.pug
+++ b/src/views/pages/contacts.pug
@@ -1,6 +1,6 @@
 extends ../layouts/default
 block variables
-  title Каталог
+  title Контактная
 
 block content
   include ../../components/buttons/buttons.pug
