--- a/src/components/buttons/buttons.scss
+++ b/src/components/buttons/buttons.scss
@@ -191,7 +191,10 @@ $hoverLine: 2px;
       box-shadow: 0px 15px 40px rgba(0, 96, 206, 0.15);
       color: #fff;
     }
-
+    &.light {
+      background: rgba(102, 78, 249, 0.1);
+      color: #664EF9;
+    }
     &.cardBtn {
         max-height: 33px;
         padding: 8px 14px;
@@ -751,6 +754,38 @@ $hoverLine: 2px;
      }
 }
 
+.searchInput {
+
+  display: flex;
+  justify-content: space-between;
+  width: calc(616px - 15px);
+  padding-left: 21px;
+  background: #FFFFFF;
+  box-shadow: 0px 10px 20px rgba(0, 96, 206, 0.05);
+  border-radius: 20px;
+
+  button {
+
+    border: none;
+    &.purple {
+      width: 53.07px;
+      height: 37.07px;
+      background: #664EF9;
+      border-radius: 19px;
+
+      &:hover {
+        background: #5C35F9;
+      }
+    }
+  }
+  input {
+    padding: 0;
+    width: 100%;
+    border: none;
+    outline: none;
+    @include fontStd(#686868, 14px, 500, 17px)
+  }
+}
 .stdTextArea {
 
   &.contacts {
