--- a/src/views/pages/cathalog.pug
+++ b/src/views/pages/cathalog.pug
@@ -5,7 +5,7 @@ block variables
 block content
   include ../../components/buttons/buttons.pug
   include ../../components/content/content.pug
-  .content
+  .content(id= 'cathalogPage')
     .content_container
         include ../../components/searchBlock/searchBlockCathalogComponent.pug
         include ../../components/searchBlock/searchBlockCathalogFilterComponent.pug
