--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -5,7 +5,7 @@ block variables
 block content
   include ../../components/buttons/buttons.pug
   include ../../components/content/content.pug
-  .content
+  .content(id = 'indexPage')
     .content_container
           include ../../components/searchBlock/searchBlockComponent.pug
           include ../../components/rentsBlock/rentTypesCardsBlock.pug
