--- a/src/views/pages/login.pug
+++ b/src/views/pages/login.pug
@@ -4,22 +4,23 @@ block variables
     title Вход и регистрация
 include ../../components/buttons/buttons.pug
 block content
-    .login
-        .login_content
-            .login_content_background
-            .login_content_form
-                .login_content_form_innerContent
-                    .login_content_form_innerContent_auth
-                        .login_content_form_innerContent_auth_title Авторизация
-                        .login_content_form_innerContent_auth_description Авторизируйтесь, чтобы начать <br> публиковать свои объявления
-                        .login_content_form_innerContent_auth_inputs
-                            +authInput({text: 'Логин', cls: 'authForm', id: 'login', icon: 'login'})
-                            +authInput({text: 'Пароль', cls: 'authForm', id: 'password', icon: 'password'})
-                            .login_content_form_innerContent_auth_inputs_bottom
-                                +toggleBtn({text: 'Запомнить меня', id: 'rememberMe'})
-                                a(href = '/cathalog.html') Забыли пароль?
-                        .login_content_form_innerContent_auth_button
-                            +stdBtn({text: 'Войти', cls: 'primary', color: 'authBtn', textAlign: 'center'})
-                        .login_content_form_innerContent_auth_createAcc
-                            span= 'Ещё нет аккаунта? '
-                            a(href = '/register.html') Создайте аккаунт
+    .content(id = 'loginPage')
+        .login
+            .login_content
+                .login_content_background
+                .login_content_form
+                    .login_content_form_innerContent
+                        .login_content_form_innerContent_auth
+                            .login_content_form_innerContent_auth_title Авторизация
+                            .login_content_form_innerContent_auth_description Авторизируйтесь, чтобы начать <br> публиковать свои объявления
+                            .login_content_form_innerContent_auth_inputs
+                                +authInput({text: 'Логин', cls: 'authForm', id: 'login', icon: 'login'})
+                                +authInput({text: 'Пароль', cls: 'authForm', id: 'password', icon: 'password'})
+                                .login_content_form_innerContent_auth_inputs_bottom
+                                    +toggleBtn({text: 'Запомнить меня', id: 'rememberMe'})
+                                    a(href = '/cathalog.html') Забыли пароль?
+                            .login_content_form_innerContent_auth_button
+                                +stdBtn({text: 'Войти', cls: 'primary', color: 'authBtn', textAlign: 'center'})
+                            .login_content_form_innerContent_auth_createAcc
+                                span= 'Ещё нет аккаунта? '
+                                a(href = '/register.html') Создайте аккаунт
