--- a/src/views/pages/submit.pug
+++ b/src/views/pages/submit.pug
@@ -4,13 +4,14 @@ block variables
     title Вход и регистрация
 include ../../components/buttons/buttons.pug
 block content
-    .submit
-        .submit_content
-            .submit_content_background
-            .submit_content_form
-                .submit_content_form_innerContent
-                    .submit_content_form_innerContent_auth
-                        .submit_content_form_innerContent_auth_title Подтвердите регистрацию
-                        .submit_content_form_innerContent_auth_description Письмо для подтверждения аккаунта отправлено почту. Перейдите по ссылке, указанной в письме. Если письма нет, то проверьте спам.
-                        .submit_content_form_innerContent_auth_button
-                            +stdBtn({text: 'Понятно', cls: 'primary', color: 'authBtn ', textAlign: 'center',width: '117px'})
+    .content(id = 'submitPage')
+        .submit
+            .submit_content
+                .submit_content_background
+                .submit_content_form
+                    .submit_content_form_innerContent
+                        .submit_content_form_innerContent_auth
+                            .submit_content_form_innerContent_auth_title Подтвердите регистрацию
+                            .submit_content_form_innerContent_auth_description Письмо для подтверждения аккаунта отправлено почту. Перейдите по ссылке, указанной в письме. Если письма нет, то проверьте спам.
+                            .submit_content_form_innerContent_auth_button
+                                +stdBtn({text: 'Понятно', cls: 'primary', color: 'authBtn ', textAlign: 'center',width: '117px'})
